# ansible-role-postgresql

./: .ansible-lint-ignore  .gitignore  .talismanrc  .yamllint  Makefile  README.md  ansible.cfg  devbox.json  pyproject.toml  requirements.yml
.github/workflows/: lint.yml  molecule.yml  release.yml
defaults/: main.yml
defaults/main/: conf.yml  package.yml  params.yml  pgaudit.yml  pgcron.yml  pgstat_statements.yml  service.yml
handlers/: main.yml
meta/: main.yml
molecule/common/: converge.yml  prepare.yml  verify.yml
molecule/configure/: molecule.yml  verify.yml
molecule/databases/: molecule.yml  side_effect.yml
molecule/default/: converge.yml  prepare.yml  verify.yml
molecule/deploy/: molecule.yml
molecule/hold/: converge.yml  molecule.yml  side_effect.yml  verify.yml
molecule/initdb/: molecule.yml  verify.yml
molecule/install/: molecule.yml
molecule/mask/: molecule.yml
molecule/masked/: molecule.yml
molecule/stop/: molecule.yml
molecule/stopped/: molecule.yml
tasks/: configure.yml  databases.yml  extensions.yml  install.yml  lock.yml  main.yml  pgaudit.yml  pgcron.yml  pgstat_statements.yml  roles.yml  service.yml  vars.yml
templates/: pg_hba.conf.j2  pg_ident.conf.j2  postgres.conf.j2  postgres.sh.j2  postgresql.conf.j2
