[tool.poetry]
name = "nephelaiio.postgresql"
version = "0.1.0"
description = ""
authors = ["nephelaiio"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ansible = "^9.3.0"
ansible-lint = { version = "24.2.3", markers = "platform_system != 'Windows'" }
molecule = "^24.2.0"
molecule-plugins = {extras = ["docker"], version = "^23.5.3"}
yamllint = "^1.32.0"
netaddr = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
